--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-keychain": "^9.0.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
